added tech logos

--- a/public/message.html
+++ b/public/message.html
@@ -16,11 +16,29 @@
 	<section class="hero is-medium gig-banner">
 		<div class="container">
 			<h1 class="title">Jacob's Slack App</h1>
-			<a href ="https://github.com/jjwall/Slack-App" class="button is-small" style="width:90px; margin-top: 10px;">
-				<span class="icon">
-					<img src = "media/github1.png" alt = "Slack App GitHub" style = "width:20px; margin-right:5px;">
-				</span><strong>GitHub</strong>
-			</a>
+			<div class="columns">
+				<div class ="column is-one-third">
+					<div class="content has-text-centered">
+						<p>Check out the GitHub!</p>
+						<div style="margin-top:45px;">
+							<a href ="https://github.com/jjwall/Slack-App" alt="GitHub" style="width:90px;"><img src = "media/github1.png" alt = "Slack App GitHub" style = "width:30px; margin-right:8px; margin-bottom:-8px;"><strong style="margin-bottom:15px;">GitHub</strong></a>
+						</div>
+					</div>
+				</div>
+				<div class="column is-one-third">
+					<div class="content has-text-centered">
+						<p>Realtime database!</p>
+						<a href="https://firebase.google.com/"><img src="media/firebase-logo.jpg" alt="Firebase" style="width:175px;"></a>
+					</div>
+				</div>
+				<div class="column is-one-third">
+					<div class="content has-text-centered">
+						<p>CSS Framework!</p>
+			 		<!-- <div class="content has-text-centered"> -->
+				 		<a href="http://bulma.io/"><img src="media/bulma-logo.png" alt="Bulma.io" style="width:120px; margin-top:30px; margin-bottom:25px;"></a>
+					</div>
+		 		</div>
+			</div>
 		</div>
 	</section>
 	<!-- Main page content -->
