--- a/public/message.html
+++ b/public/message.html
@@ -15,13 +15,13 @@
 	<!-- 	Main page header 	-->
 	<section class="hero is-medium gig-banner">
 		<div class="container">
-			<h1 class="title">Jacob's Slack App</h1>
+			<h1 class="title"><strong>Jacob's Slack App</strong> made for <a href="https://sumo.com/" alt="Sumo"><img src="media/sumo-logo.png" alt="Firebase" style="width:150px;"></a></h1>
 			<div class="columns">
 				<div class ="column is-one-third">
 					<div class="content has-text-centered">
 						<p>Check out the GitHub!</p>
-						<div style="margin-top:45px;">
-							<a href ="https://github.com/jjwall/Slack-App" alt="GitHub" style="width:90px;"><img src = "media/github1.png" alt = "Slack App GitHub" style = "width:30px; margin-right:8px; margin-bottom:-8px;"><strong style="margin-bottom:15px;">GitHub</strong></a>
+						<div style="margin-top:45px; margin-bottom:25px;">
+							<a href ="https://github.com/jjwall/Slack-App" alt="GitHub" style="width:90px;"><img src = "media/github1.png" alt = "Slack App GitHub" style = "width:30px; margin-right:8px; margin-bottom:-6px;"><strong style="font-size:25px">GitHub</strong></a>
 						</div>
 					</div>
 				</div>
