--- a/public/message.html
+++ b/public/message.html
@@ -15,27 +15,27 @@
 	<!-- 	Main page header 	-->
 	<section class="hero is-medium gig-banner">
 		<div class="container">
-			<h1 class="title"><strong>Jacob's Slack App</strong> made for <a href="https://sumo.com/" alt="Sumo"><img src="media/sumo-logo.png" alt="Firebase" style="width:150px;"></a></h1>
+			<h1 class="title"><strong>Jacob's Slack App</strong> made for <a href="https://sumo.com/" alt="Sumo"><img src="../media/sumo-logo.png" alt="Firebase" style="width:150px;"></a></h1>
 			<div class="columns">
 				<div class ="column is-one-third">
 					<div class="content has-text-centered">
 						<p>Check out the GitHub!</p>
 						<div style="margin-top:45px; margin-bottom:25px;">
-							<a href ="https://github.com/jjwall/Slack-App" alt="GitHub" style="width:90px;"><img src = "media/github1.png" alt = "Slack App GitHub" style = "width:30px; margin-right:8px; margin-bottom:-6px;"><strong style="font-size:25px">GitHub</strong></a>
+							<a href ="https://github.com/jjwall/Slack-App" alt="GitHub" style="width:90px;"><img src = "../media/github1.png" alt = "Slack App GitHub" style = "width:30px; margin-right:8px; margin-bottom:-6px;"><strong style="font-size:25px">GitHub</strong></a>
 						</div>
 					</div>
 				</div>
 				<div class="column is-one-third">
 					<div class="content has-text-centered">
 						<p>Realtime database!</p>
-						<a href="https://firebase.google.com/"><img src="media/firebase-logo.jpg" alt="Firebase" style="width:175px;"></a>
+						<a href="https://firebase.google.com/"><img src="../media/firebase-logo.jpg" alt="Firebase" style="width:175px;"></a>
 					</div>
 				</div>
 				<div class="column is-one-third">
 					<div class="content has-text-centered">
 						<p>CSS Framework!</p>
 			 		<!-- <div class="content has-text-centered"> -->
-				 		<a href="http://bulma.io/"><img src="media/bulma-logo.png" alt="Bulma.io" style="width:120px; margin-top:30px; margin-bottom:25px;"></a>
+				 		<a href="http://bulma.io/"><img src="../media/bulma-logo.png" alt="Bulma.io" style="width:120px; margin-top:30px; margin-bottom:25px;"></a>
 					</div>
 		 		</div>
 			</div>
