Can now make channels public or private

--- a/public/home.html
+++ b/public/home.html
@@ -59,9 +59,17 @@
 					<h5 class="modal-card-title">Create Channel</h5>
 				</div>
 				<div class="modal-card-body">
+					<p>Channel Name?</p>
 					<p class="control">
 						 <input class="input" id="channelName" type="text" placeholder="e.g. The Chat Room" style="width:300px;">
 					</p>
+					<br>
+					<label class="checkbox">
+          	<input type="checkbox" id="publicPrivate" checked>
+          	Public Channel?
+        	</label>
+					<br>
+					<br>
 					<button class="button is-medium index-button" id = "submit-create">Submit</button>
 				</div>
 				<div class="modal-card-foot">
