--- a/public/message.html
+++ b/public/message.html
@@ -16,7 +16,7 @@
 	<section class="hero is-medium gig-banner">
 		<div class="container">
 			<h1 class="title"><strong>Jacob's Slack App</strong> made for <a href="https://sumo.com/" alt="Sumo"><img src="../media/sumo-logo.png" alt="Firebase" style="width:150px;"></a></h1>
-			<div class="columns">
+			<!-- <div class="columns">
 				<div class ="column is-one-third">
 					<div class="content has-text-centered">
 						<p>Check out the GitHub!</p>
@@ -34,11 +34,10 @@
 				<div class="column is-one-third">
 					<div class="content has-text-centered">
 						<p>CSS Framework!</p>
-			 		<!-- <div class="content has-text-centered"> -->
 				 		<a href="http://bulma.io/"><img src="../media/bulma-logo.png" alt="Bulma.io" style="width:120px; margin-top:30px; margin-bottom:25px;"></a>
 					</div>
 		 		</div>
-			</div>
+			</div> -->
 		</div>
 	</section>
 	<!-- Main page content -->
